One JVM argument --add-opens works